Code Alignment Fixes

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*Index.html (Home Page)*/
-/*Navigation Bar*/
 
+/*Navigation Bar*/
 .default-heading {
   text-align: center;
 }
@@ -27,7 +27,6 @@ header {
   margin:0;
   display: flex; 
   justify-content: center;
-  
 }
 
 h1 {
@@ -35,11 +34,11 @@ h1 {
 }
 
 ul.pages {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
 }
 
 ul.pages li {
@@ -188,6 +187,10 @@ body {
   color: white;
 }
 
+.address a {
+  color:white;
+}
+
 /*Home Page Images*/
 .home-page-images {
   display: flex;
@@ -307,10 +310,10 @@ p {
   width: 95%;
   margin: 0 auto;
   border-radius: 8px
-  }
+}
   
 .founder-box p {
-font-size: 20px; 
+  font-size: 20px; 
 }
   
 .founder-box li {
@@ -333,7 +336,6 @@ font-size: 20px;
   max-height: 100%;
 }
 
-
 .cert-button {
   display: block;
   margin-right: 30px; 
@@ -342,7 +344,6 @@ font-size: 20px;
 }
 
 /*Coaches*/
-
 .our-coaches-box {
   display: flex;
   justify-content: space-between;
@@ -395,11 +396,10 @@ font-size: 20px;
 /*Coaching.html*/
 
 /*Coaching Info*/
-
 .equipment-page-heading
-  {
-    text-align: center;
-  }
+{
+  text-align: center;
+}
   
 .container {
   display: flex;
@@ -438,7 +438,7 @@ font-size: 20px;
   text-align: center;
 }
   
-.private-coaching-small-box{
+.private-coaching-small-box {
   flex-basis: 30%; 
   background-color: rgba(252, 224, 224, 0.863);
   padding: 20px;
@@ -453,7 +453,6 @@ font-size: 20px;
 }
 
 /*Coaching Levels Details*/
-
 .coaching-levels-subbox,
 .image-box p {
   border: 2px solid grey;
@@ -516,6 +515,7 @@ font-size: 20px;
   margin-top: -70px;
   margin-right: 70px;
 }
+
  /*Coaching Page Images*/
  .coaching-page-images {
   display: flex;
@@ -530,9 +530,7 @@ font-size: 20px;
   margin-top: 5px;
 }
 
-
 /*Sign Up Form*/
-
 .form-heading{
   text-align: center;
   }
@@ -594,7 +592,6 @@ form input[type="submit"] {
 /*Equipment.html*/
 
 /*Filter Panel*/
-
 .filter-box {
   display: flex;
   justify-content: space-between;
@@ -624,7 +621,6 @@ form input[type="submit"] {
 }
 
 /*Shopping Cart*/
-
 .add-to-cart-button {
   font-size: 18px; 
   padding: 10px 20px; 
@@ -763,7 +759,6 @@ form input[type="submit"] {
 }
 
 /*Bowling Ball Display*/
-
 body {
   font-family: 'Lato', sans-serif;
   margin: 0;
@@ -788,7 +783,7 @@ body {
   position: relative;
   border-radius: 15px;
   background-color: #f7efe6;
-  transition: transform 0.3s ease-in-out; /* Add this line */
+  transition: transform 0.3s ease-in-out; 
   margin: 5px;
 }
 
@@ -827,7 +822,6 @@ body {
 }
 
 /*Hidden Additional Ball Info Box*/
-
 .ball-info {
   display: none;
   position: absolute;
@@ -847,8 +841,6 @@ body {
 
   /*Index.html (Home Page)*/
   /*Navigation Bar*/
-
-  /*Disable Left Right Scrolling in Mobile View*/
   body {
     overflow-x: hidden; /* Disable horizontal scrolling */
   }
@@ -956,7 +948,6 @@ body {
   }
 
   /*Our Founder*/
-
   .founder-grid {
     grid-template-columns: 1fr; 
   }
@@ -1005,7 +996,6 @@ body {
   /*Coaching.html*/
 
   /*Coaching Details*/
-
   .container {
     flex-direction: column;
     align-items: center;
@@ -1020,16 +1010,15 @@ body {
     flex-basis: 100%; 
     width:90%;
     margin-top: 20px;
-}    
+  }    
 
   .our-rationale-image-box {
-  margin: 0 auto;  
-  margin-right: 15px; 
-  margin-bottom: 210px;
-}
+    margin: 0 auto;  
+    margin-right: 15px; 
+    margin-bottom: 210px;
+  }
 
   /*Coaching Levels*/
-
   .coaching-levels-grid {
     grid-template-columns: 1fr; 
     justify-items: center;
@@ -1058,7 +1047,6 @@ body {
   }
 
   /*Sign Up Form*/
-
   form {
     grid-template-columns: 1fr; 
     width: 90%; 
@@ -1082,16 +1070,15 @@ body {
   }
 
   /*Validation Message for Form*/
-
   .confirmation-message-box,
   .error-message {
-    bottom: 50%; /* Adjust the value to center vertically */
+    bottom: 50%; 
     transform: translate(-50%, -50%);
   }
 
   /*Equipment.html*/
+
   /*Filter Panel*/
- 
   .filter-box label,
   .filter-box select {
     width: 50%; 
